[project]
name = "glowing-enigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.12.42",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-memory-mem0>=0.3.1",
    "mem0ai[graph]>=0.1.107",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "neo4j>=5.28.1",
    "networkx>=3.5",
    "matplotlib>=3.10.3",
    "netgraph>=4.13.2",
    "llama-index-tools-tavily-research>=0.3.0",
    "tavily-python>=0.7.6",
]
